[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"
description = "Token-efficient Rust project template with strict clippy lints"
repository = "https://github.com/syntaxai/rust-template"
license = "MIT"

[lints.clippy]
# Deny: never allow these
dbg_macro = "deny"
todo = "deny"
redundant_clone = "deny"

# Warn: minimize boilerplate / redundant tokens
needless_return = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"
needless_pass_by_value = "warn"
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
redundant_field_names = "warn"
redundant_pattern_matching = "warn"
redundant_else = "warn"
let_and_return = "warn"
collapsible_if = "warn"
collapsible_else_if = "warn"
single_match = "warn"
manual_map = "warn"
manual_filter = "warn"
manual_find = "warn"
manual_flatten = "warn"
manual_is_ascii_check = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
manual_unwrap_or = "warn"
map_unwrap_or = "warn"
match_like_matches_macro = "warn"
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
iter_on_single_items = "warn"
option_as_ref_deref = "warn"
bind_instead_of_map = "warn"
unnecessary_wraps = "warn"
unnecessary_unwrap = "warn"
unnecessary_lazy_evaluations = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
